# stocks_analyzer

./: README.md  app.py  main.py  pyproject.toml
assets/: stratergy-dropdown.css
data/: generator.py  stock.py
stratergy/: __init__.py  buy_and_hold.py  market.py  mean_revision.py  momentum.py  nify.py  portfolio.py  simulate.py  stratergy.py  value.py
ui/: const.py  data_loader.py  types.py  viz_market.py  viz_single_stratergy_with_dropdown.py  viz_stock.py  viz_stratergy.py
ui/components/: __init__.py  icon_card.py  plot_history_actions_table.py  plot_market.py  portfolio_and_theriotical_limits.py
ui/pages/: main_page.py  market_view.py  stock_view.py  strategy_market_view.py
